--- a/patelPackage/main/default/lwc/filterComponent/filterComponent.html
+++ b/patelPackage/main/default/lwc/filterComponent/filterComponent.html
@@ -2,24 +2,31 @@
     <lightning-card title="Filter">
         <div class="slds-p-around_medium">
             <lightning-input type='text' label='Product' onkeyup={inputHandler}></lightning-input>
+            <div>
+                <lightning-slider label="Price" step='1' min='0' max='100' value={price} onchange={priceHandler}>
+                </lightning-slider>
+            </div>
+
+            <div>
+                <h1>Category</h1>
+                <template if:true={categories.data}>
+                    <template for:each={categories.data.values} for:item="category">
+                        <lightning-input class='checkbox' key={category.value} label={category.label} type="checkbox"
+                            data-value={category.value} onchange={checkboxhandler}>
+                        </lightning-input>
+                    </template>
+                </template>
+
+
+            </div>
+
+
+
+
             <lightning-button label="Filter" onclick={clickHandler}></lightning-button>
+
         </div>
 
-        <!-- <lighting-input type="text" label="Search for product" onkeyup={inputHandler}>
-        </lighting-input> 
-        <lightning-button label="Filter" onclick={clickHandler}></lightning-button> -->
-
-        <!-- <input type="text" onclick={inputHandler}> -->
-        <!-- <button onclick={clickHandler}>Click</button> -->
-
-
-        <template if:true={productList}>
-            <template for:each={productList} for:item='product'>
-                <div key={product.id}>
-                    <p>Product : {product.Name}</p>
-                </div>
-            </template>
-        </template>
 
     </lightning-card>
 </template>
