--- a/force-catalog/main/default/lwc/productCatalog/productCatalog.html
+++ b/force-catalog/main/default/lwc/productCatalog/productCatalog.html
@@ -1,12 +1,8 @@
 <template>
     <div class="slds-card slds-var-p-around_x-small">
         <template if:true={searchBarVisible}>
-            <lightning-input
-                label="Search Key"
-                type="text"
-                onchange={handleSearchKeyChange}
-                class="search-bar"  
-            ></lightning-input> <!-- add search bar to .css file or find different existing slds class -->
+            <lightning-input label="Search Key" type="text" onchange={handleSearchKeyChange} class="search-bar">
+            </lightning-input> <!-- add search bar to .css file or find different existing slds class -->
         </template>
         <template if:false={products.data}>
             <p>Somethings Wrong...</p>
@@ -15,22 +11,14 @@
             <template if:true={products.data.records.length}>
                 <div class="content">
                     <template for:each={products.data.records} for:item="product">
-                        <c-product-tile 
-                            key={product.Id}
-                            product={product}
-                            draggable={tilesAreDraggable}
-                            class="slds-var-m-around_x-small"
-                            onselected={handleSelectedProduct}
-                        ></c-product-tile> <!-- onselected={handleSelectedProduct} -->
+                        <c-product-tile key={product.Id} product={product} draggable={tilesAreDraggable}
+                            class="slds-var-m-around_x-small" onselected={handleSelectedProduct}></c-product-tile>
+                        <!-- onselected={handleSelectedProduct} -->
                     </template>
                 </div>
-                <c-paginator
-                    page-number={pageNumber}
-                    page-size={products.data.pageSize}
-                    total-item-count={products.data.totalItemCount}
-                    onprevious={handlePreviousPage}
-                    onnext={handleNextPage} 
-                ></c-paginator>
+                <c-paginator page-number={pageNumber} page-size={products.data.pageSize}
+                    total-item-count={products.data.totalItemCount} onprevious={handlePreviousPage}
+                    onnext={handleNextPage}></c-paginator>
             </template>
             <template if:false={products.data.records.length}>
                 <p>No products where found using you search criteria</p>
